# toy-OA

./: .gitignore  README.md  pyproject.toml  setup.cfg
MainTypes/: ImageType.py  ToolsType.py
cli/: main.py
docs/: 404.html  index.html
docs-pages/vuepress/.vuepress/: config.js
docs/assets/css/: 0.styles.12a3b986.css
docs/assets/js/: 10.84f1e261.js  11.54a05f6f.js  12.984ed054.js  13.f3f698a4.js  14.d644af8a.js  15.6fac5feb.js  16.cac4e1ce.js  17.e003429d.js  18.0ad189a1.js  19.5b360428.js  2.7f20a66b.js  20.a6897b60.js  21.b40963cd.js  22.79ec76c2.js  23.da1f48ed.js  24.5a7c0e3e.js  3.d0f36584.js  4.53a15017.js  5.0954f2e3.js  6.5ec218b2.js  7.debe556e.js  8.b1033f0f.js  9.988b54ac.js  app.e3459327.js
docs/guide/: introduction.html  office.html
docs/office/: email.html  excel.html  file.html  image.html  ocr.html  pdf.html  ppt.html  tools.html  video.html  web.html  word.html
docs/qaq/: qaq.html
docs/ref/: git.html  log.html  ref.html
office/: file.py  pdf.py  tools.py  video.py
requirements/: requirements.txt
service/tools/: __init__.py
shell/: allpackages.txt  clean.sh
src/: pyproject.toml
src/MainTypes/: ExcelType.py  PDFType.py  PPTType.py
src/cli/: office.py
src/office/: excel.py  image.py  ppt.py  word.py
src/service/: __init__.py
src/shell/: allpackages.txt
